--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
     <!-- font-awsome lib -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="css/main.css">
+    <!-- <link rel="stylesheet" href="/css/main.css"> -->
     <!-- this is a temporary override file - normally these rules would go in a Sass module -->
     <link rel="stylesheet" href="css/override.css">
     
