--- a/public/sass/modules/_main.scss
+++ b/public/sass/modules/_main.scss
@@ -1,3 +1,109 @@
-body{
-background-color: aqua;
+body {
+    background-image: url('/images/background.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    font-family: 'Oxygen', sans-serif;
+}
+
+#main_header {
+    top:0px;
+}
+
+.logo {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    text-align: left;
+    width: 200px;
+    align-items: baseline;
+}
+
+#render-container {margin-top: 80px;}
+
+.login-submit{
+    margin-top:1em;
+}
+
+.log-in label{
+    margin: 1em 0.5em 0.5em 0;
+}
+
+.missing-field{
+    border:2px solid red;
+}
+
+.float-right {
+    float: right;
+}
+
+.signup { 
+    margin-left: 1.5rem;
+}
+
+.user-panel {
+    text-align: center;
+
+    
+p{
+    color: #fffefe;
+}
+
+}
+
+.user-panel ul li {
+    list-style: none;
+}
+
+.userpanel {
+    display: inline-block;
+    margin: 1em;
+}
+
+footer{
+    p{
+        color: white;
+    }
+}
+
+.logIn_button{
+    button{
+        background-color: $yellow;
+    }
+}
+/* kids movie page style */
+.movie-feature-card{
+    position:relative;
+    margin-bottom: 40px;
+}
+
+.feature-img {
+    display:block;
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+
+    position: relative;
+    z-index: 0;
+}
+
+.feature-img :hover{
+    border: $yellow 3px solid;
+}
+
+.k-movie-detail{
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 16px;
+    z-index: 4;
+
+    p{
+        text-align: center;
+        color: white;
+        font-size:2rem
+    }
 }
