--- a/views/index.html
+++ b/views/index.html
@@ -10,9 +10,12 @@
     <!-- font-awsome lib -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- <link rel="stylesheet" href="/css/main.css"> -->
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
     <!-- this is a temporary override file - normally these rules would go in a Sass module -->
-    <link rel="stylesheet" href="css/override.css">
+    <!-- <link rel="stylesheet" href="css/override.css"> -->
     
     <title>.: Roku Flashback :.</title>
 </head>
@@ -20,18 +23,21 @@
     <main id="app">
         <header id="main_header">
             <div class="logo">
-                <img src="images/roku.svg" alt="Roku logo" width="90">
-                <span>FlashBack</span>
+                <img src="images/logo_white.svg" alt="Roku logo">
             </div>
             
             <nav class="float-right">
                 <ul v-if="authenticated">
-                    <li><i class="fas fa-user-circle"></i></li>
-                    <li><i class="fas fa-cog"></i></li>
-                    <li @click="logUserOut"><i class="fas fa-power-off"></i></li>
+                    <!-- <li><i class="fas fa-user-circle"></i></li>
+                    <li><i class="fas fa-cog"></i></li> -->
+                    <li class="log_out" @click="logUserOut"><img src="/images/log_out.png" alt="log out"></li>
                 </ul>
             </nav>
         </header> 
+
+        <footer>
+            <p>Credit @Roku_2023</p>
+        </footer>
         <router-view @setauthenticated="loggedIn" id="render-container"></router-view>
     </main>
 
